<resources>
    <string name="app_name">App Escrita</string>
    <string name="login">Usuário</string>
    <string name="senha">Senha</string>
    <string name="cadastro"><u>Cadastre-se</u></string>
    <string name="esqueci_senha"><u>Esqueci minha senha</u></string>
    <string name="title_activity_lista_capitulo">ActivityListaCapitulo</string>
    <string name="title_icone_app_bar"></string>
    <string name="title_activity_lista_livro">Livros</string>
    <string name="title_activity_editar_capitulo">ActivityEditarCapitulo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sumario">Sumário</string>
    <string name="snackbar_insira_usuario">Insira um nome de usuário</string>
    <string name="snackbar_insira_senha">Insira uma senha</string>
    <string name="snackbar_usuario_inexistente">Usuário inexistente</string>
    <string name="snackbar_senha_incorreta">Senha incorreta</string>
    <string name="snackbar_usuario_cadastrado">Este nome de usuário já está cadastrado</string>
    <string name="snackbar_bem_sucedido">Cadastro bem sucedido</string>
    <string name="snackbar_falhou_salvar">Erro ao salvar as alterações</string>
    <string name="drawer_configuracoes">Configurações</string>
    <string name="drawer_avalie">Avalie-nos</string>
    <string name="drawer_sair">Sair</string>
    <string name="dialog_criar_livro_titulo">Insira o título do livro</string>
    <string name="dialog_botao_criar">Criar</string>
    <string name="dialog_botao_cancelar">Cancelar</string>
    <string name="dialog_botao_excluir">Cancelar</string>
    <string name="dialog_deletar_livro">Deseja deletar este livro?</string>
    <string name="context_menu_deletar">Deletar</string>
    <string name="context_menu_renomear">Renomear</string>
    <string name="adicionar_capitulo_insira_titulo">Insira o título do capítulo aqui</string>
    <string name="adicionar_capitulo_insira_texto">Insira o texto do capítulo aqui</string>
    <string name="adicionar_capitulo_insira_numero">Insira o texto do capítulo aqui</string>
    <string name="numero_abrv">N°:</string>

    <string name="title_activity_user_config">UserConfig</string>
    <string name="user_name">Carl</string>
    <string name="user_secname">Jhonson</string>
    <string name="name">Nome completo do usuário:</string>
    <string name="sobrenome">Sobrenome do usuário:</string>
    <string name="email">Email do usuário:</string>
    <string name="user_email">CJhonson95@grooves.com</string>
    <string name="infoabouttheme">A mudança de tema só poderá ser realizada futuramente</string>
    <string name="theme">Tema:</string>
    <string name="font">Fonte:</string>
    <string name="config">_     CONFIGURAÇÕES</string>
    <string name="edituser">Editar usuário</string>
    <string name="returnuser">Voltar</string>
    <string name="savechanges">Salvar configurações</string>
    <string name="dischanges">Descartar configurações</string>
    <string name="infoaboutfont">A mudança de fonte só poderá ser realizada futuramente</string>
    <string name="userconfigname">_      CONFIGURAÇÕES DE USUÁRIO</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="fonts">
        <item>Arial</item>
        <item>Calibri</item>
        <item>Comic Sans</item>
        <item>Consolas</item>
        <item>Roboto</item>
        <item>Times New Roman</item>
        <item>Verdana</item>
    </string-array>
</resources>
